Adicionado id nos <imput>

--- a/user_registration.html
+++ b/user_registration.html
@@ -152,16 +152,16 @@
                     <div class="form">
                         <p>
                             <label for="">Nome completo</label>
-                            <input id="" name="" required="required" type="text" placeholder=""/>
+                            <input id="nome" name="" required="" type="text" placeholder=""/>
                         </p>
                         <div class="user-email">
                             <p>
                                 <label for="">Usuário</label>
-                                <input id="" name="" required="required" type="text" placeholder=""/>
+                                <input id="usuario" name="" required="" type="text" placeholder=""/>
                             </p>
                             <p>
                                 <label for="">Email</label>
-                                <input id="" name="" required="required" type="text" placeholder=""/>
+                                <input id="email" name="" required="" type="text" placeholder=""/>
                             </p>
                         </div>
                         <div class="office-access">   
