adc msg de erro nos input e link do js

--- a/user_registration.html
+++ b/user_registration.html
@@ -153,15 +153,18 @@
                         <p>
                             <label for="">Nome completo</label>
                             <input id="nome" name="" required="" type="text" placeholder=""/>
+                            <p id="msgErro" style="display: none;">O Campo precisa ser preenchido</p>
                         </p>
                         <div class="user-email">
                             <p>
                                 <label for="">Usuário</label>
                                 <input id="usuario" name="" required="" type="text" placeholder=""/>
+                                <p id="msgErro2" style="display: none;">O Campo precisa ser preenchido</p>
                             </p>
                             <p>
                                 <label for="">Email</label>
                                 <input id="email" name="" required="" type="text" placeholder=""/>
+                                <p id="msgErro3" style="display: none;">O Campo precisa ser preenchido</p>
                             </p>
                         </div>
                         <div class="office-access">   
@@ -207,5 +210,7 @@
          </div>
     </div> 
 </div>
+
+<script src="user_registration.js"></script>
 </body>
 </html>
