criando tela de gerenciamento e  href de usuario

--- a/home.html
+++ b/home.html
@@ -35,8 +35,8 @@
         </button>
         <div class="collapse" id="home-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-            <li><a href="cadastrar_usuario.html" class="link-dark rounded">Cadastrar usuário</a></li>
-            <li><a href="gerenciar_usuario.html" class="link-dark rounded">Gerenciar usuário</a></li>
+            <li><a href="user_registration.html" class="link-dark rounded">Cadastrar usuário</a></li>
+            <li><a href="user_management.html" class="link-dark rounded">Gerenciar usuário</a></li>
           </ul>
         </div>
       </li>
