acabamento da tela gerenciamento de usuario

--- a/user_registration.html
+++ b/user_registration.html
@@ -21,7 +21,7 @@
             <ul class="list-unstyled ps-0">
                 <li class="mb-1">
                 <div class="sidebar-logo">
-                    <h6>SysUnity</h6>
+                    <h6><a href="home.html" id="home"> SysUnity</a></h6>
                 </div>
                 </li>
                 <li class="mb-1">
@@ -121,9 +121,8 @@
   <section class="content-table">
     <header class="bar-status">
       <div class="welcome">    
-        <h1 id="hello">Olá Taila,</h1>
-        <h1>seja bem vinda!</h1>
-      </div>
+        <h1 id="hello">Usuários</h1>
+    </div>
       <ul class="bar-login">
         <li id="usuario">
           <div class="btn-group">
