--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
     <ul class="list-unstyled ps-0">
       <li class="mb-1">
         <div class="sidebar-logo">
-          <h6>SysUnity</h6>
+          <h6><a href="home.html" id="home"> SysUnity</a></h6>
         </div>
       </li>
       <li class="mb-1">
