--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           <p>
             <label for="senha_login">Senha</label>
             <input id="senha_login" name="senha_login" required="required" type="password" placeholder="digite sua senha..."/>
+            <p id="msgErro" style="display: none;">O Campo precisa ser preenchido</p>
           </p>
             <div class="btn-group">
             <button class="btn btn-primary" id="btn_Entrar" type="button">ENTRAR</button>
