adc link nas li

--- a/home.html
+++ b/home.html
@@ -38,8 +38,8 @@
         </button>
         <div class="collapse" id="home-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-            <li><a href="#" class="link-dark rounded"> <p>Cadastrar usuário</p></a></li>
-            <li><a href="#" class="link-dark rounded">Gerenciar usuário</a></li>
+            <li><a href="user_registration.html" class="link-dark rounded"> <p>Cadastrar usuário</p></a></li>
+            <li><a href="user_management.html" class="link-dark rounded">Gerenciar usuário</a></li>
           </ul>
         </div>
       </li>
@@ -52,8 +52,8 @@
         </button>
         <div class="collapse" id="dashboard-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-            <li><a href="#" class="link-dark rounded">Cadastrar vendas</a></li>
-            <li><a href="#" class="link-dark rounded">Gerenciar vendas</a></li>
+            <li><a href="sale_registration.html" class="link-dark rounded">Cadastrar vendas</a></li>
+            <li><a href="sale_management.html" class="link-dark rounded">Gerenciar vendas</a></li>
           </ul>
         </div>
       </li>
@@ -66,9 +66,9 @@
         </button>
         <div class="collapse" id="orders-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-            <li><a href="#" class="link-dark rounded">Cadastrar produtos</a></li>
-            <li><a href="#" class="link-dark rounded">Cadastrar nova produção</a></li>
-            <li><a href="#" class="link-dark rounded">Gerenciar produtos</a></li>
+            <li><a href="product_registration.html" class="link-dark rounded">Cadastrar produtos</a></li>
+            <li><a href="production_registration.html" class="link-dark rounded">Cadastrar nova produção</a></li>
+            <li><a href="product_management.html" class="link-dark rounded">Gerenciar produtos</a></li>
           </ul>
         </div>
       </li>
@@ -81,9 +81,9 @@
         </button>
         <div class="collapse" id="account-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-            <li><a href="#" class="link-dark rounded">Relatórios gerais</a></li>
-            <li><a href="#" class="link-dark rounded">Relatórios de vendas</a></li>
-            <li><a href="#" class="link-dark rounded">Relatórios de produtos</a></li>
+            <li><a href="reports_general.html" class="link-dark rounded">Relatórios gerais</a></li>
+            <li><a href="reports_sale.html" class="link-dark rounded">Relatórios de vendas</a></li>
+            <li><a href="reports_product.html" class="link-dark rounded">Relatórios de produtos</a></li>
           </ul>
         </div>
       </li>
@@ -92,7 +92,7 @@
         <button class="btn btn-toggle align-items-center rounded collapsed shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
           <div class="set1">
             <img src="./images/baseline_local_shipping_white_48dp.png" alt="" width="22">
-            <span>Encomendas</span>
+            <li><a href="orders.html" class="link-dark rounded">Encomendas</a></li>
           </div>
         </button>
       </li>
@@ -100,14 +100,14 @@
         <button class="btn btn-toggle align-items-center rounded collapsed shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
           <div class="set1">
             <img src="./images/baseline_history_white_48dp.png" alt="" width="22">
-            <span>Histórico</span>
+            <li><a href="historic.html" class="link-dark rounded">Histórico</a></li>
           </div>
         </button>
       </li>
       <li class="mb-1">
         <button class="btn btn-toggle align-items-center rounded collapsed  shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
           <div class="set1">
-            <span>Configurações</span>
+            <li><a href="settings.html" class="link-dark rounded">Configurações</a></li>
           </div>
           <img src="./images/baseline_settings_white_48dp.png" alt="" width="22">
         </button>
@@ -116,7 +116,7 @@
         <button class="btn btn-toggle align-items-center rounded collapsed  shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
           <div class="set1">
             <img src="./images/baseline_help_center_white_48dp.png" alt="" width="22">
-            <span>Suporte</span>
+            <li><a href="prop.html" class="link-dark rounded">Suporte</a></li>
           </div>
         </button>
       </li>
@@ -142,12 +142,12 @@
           </button>
           <ul class="dropdown-menu">
             <li>
-              <a href="#">Configurações
+              <a href="settings_user.html">Configurações
               <img src="images/baseline_settings_black_48dp.png" alt="" width="15%">
              </a>
             </li>
             <li>
-              <a href="#">Sair
+              <a href="index.html">Sair
               <img src="images/baseline_logout_black_48dp.png" alt="" width="15%">
               </a> 
             </li>
