--- a/user_management.html
+++ b/user_management.html
@@ -15,6 +15,8 @@
   <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-database.js"></script>
   <script src="script/database/database-connection.js"></script>
+  <script src="script/modal.js"></script>
+
 </head>
 <body>
   <div class="content">
@@ -214,7 +216,13 @@
                   <td id="">@elis.soeiro</td>
                   <td><img class="visibility" src="images/baseline_visibility_white_48dp.png" alt=""></td>
                   <td><img class="edit" src="images/baseline_edit_white_48dp.png" alt=""></td>
-                  <td><img class="delete" src="images/baseline_delete_white_48dp.png" alt=""></td>
+                  <td>
+                    <button class="show-example-btn" 
+                    aria-label="Try me! Example: passing a parameter, you can execute something else for 'Cancel'"
+                    onclick="executeExample('handleDismiss')">
+                      delete
+                    </button>
+                  </td>
               </tr>
             </tbody>
           </table>
@@ -223,6 +231,5 @@
     </div>
     </div> 
   </div>
-<script src="script/modal.js"></script>
 </body>
 </html>
