--- a/user_management.html
+++ b/user_management.html
@@ -5,8 +5,12 @@
   <title>SysUnity</title>
   <meta http-equiv="X-UA-Compatible" content="IE-edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <link rel="stylesheet" href="//cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css">
+  <script src="//cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap5.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="css/user_management.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="icon" href="./images/y.png"   sizes="any"  >
@@ -217,13 +221,7 @@
                   <td id="">@elis.soeiro</td>
                   <td><img class="visibility" src="images/baseline_visibility_white_48dp.png" alt=""></td>
                   <td><img class="edit" src="images/baseline_edit_white_48dp.png" alt=""></td>
-                  <td>
-                    <button class="show-example-btn" 
-                    aria-label="Try me! Example: passing a parameter, you can execute something else for 'Cancel'"
-                    onclick="executeExample('handleDismiss')">
-                    delete
-                    </button>
-                  </td>
+                  <td><img class="delete" src="images/baseline_delete_white_48dp.png" alt=""></td>
               </tr>
             </tbody>
           </table>
