arrumando chamamento do usuário no header

--- a/user_registration.html
+++ b/user_registration.html
@@ -128,7 +128,7 @@
           <div class="btn-group">
             <button class="btn btn-secondary btn-lg dropdown-toggle . shadow-none" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                 <img src="images/account_circle_black_36dp.svg" alt="" width="20%">
-                Taila Santos
+                <h6 id="user"></h6>
             </button>
             <ul class="dropdown-menu">
               <li>
@@ -206,5 +206,6 @@
          </div>
     </div> 
 </div>
+    <script type="module" src="script/user_registration.js"></script>
 </body>
 </html>
