--- a/user_management.html
+++ b/user_management.html
@@ -132,7 +132,9 @@
         <div class="btn-group">
           <button class="btn btn-secondary btn-lg dropdown-toggle . shadow-none" type="button" data-bs-toggle="dropdown" aria-expanded="false">
               <img src="images/account_circle_black_36dp.svg" alt="" width="20%">
-              Taila Santos
+              <h6 id="user2">
+                Taila Santos
+              </h6>
           </button>
           <ul class="dropdown-menu">
             <li>
@@ -220,6 +222,6 @@
     </div>
   </div> 
 </div>
-
+  <script type="module" src="script/home.js"></script>
 </body>
 </html>
