Correções do pós merge

--- a/user_registration.html
+++ b/user_registration.html
@@ -114,34 +114,7 @@
                     <li><a href="prop.html" class="link-dark rounded">Suporte</a></li>
                   </div>
                 </button>
-                </li>
-            </div>
-            </ul>
-        </section>
-  <section class="content-table">
-    <header class="bar-status">
-      <div class="welcome">    
-        <h1 id="hello">Usuários</h1>
-    </div>
-      <ul class="bar-login">
-        <li id="usuario">
-          <div class="btn-group">
-            <button class="btn btn-secondary btn-lg dropdown-toggle . shadow-none" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <img src="images/account_circle_black_36dp.svg" alt="" width="20%">
-                <h6 id="user"></h6>
-            </button>
-            <ul class="dropdown-menu">
-              <li>
-                <a href="#">Configurações
-                <img src="images/baseline_settings_black_48dp.png" alt="" width="15%">
-               </a>
-              </li>
-              <li>
-                <a href="#">Sair
-                <img src="images/baseline_logout_black_48dp.png" alt="" width="15%">
-                </a> 
-              </li>
-            </ul>
+              </li>  
           </div>
         </ul>
       </section>
@@ -224,6 +197,7 @@
     </div>
   </div> 
 </div>
-    <script type="module" src="script/user_registration.js"></script>
+
+<script src="user_registration.js"></script>
 </body>
 </html>
