arrumando a parte do cadastro

--- a/user_registration.html
+++ b/user_registration.html
@@ -198,6 +198,6 @@
   </div> 
 </div>
 
-<script src="user_registration.js"></script>
+<script type="module" src="script/user_management.js"></script>
 </body>
 </html>
