--- a/user_management.html
+++ b/user_management.html
@@ -232,6 +232,6 @@
     </div>
   </div> 
 </div>
-  <script type="module" src="script/home.js"></script>
+  <script type="module" src="script/user_management.js"></script>
 </body>
 </html>
