retirando onchange=‘valorSelect()’ 'eunice'

--- a/user_registration.html
+++ b/user_registration.html
@@ -174,7 +174,7 @@
                   </div>
                   <div class="office-access">   
                     <label for="">Cargo
-                      <select id="office" onchange = 'valorSelect();'>
+                      <select id="office" >
                         <div class="dropdown-menu">
                           <option value="proprietario">Proprietário</option>
                           <option value="vendedor">Vendedor</option>
@@ -182,7 +182,7 @@
                       </select>
                     </label>
                     <label for="">Nivel de acesso
-                      <select id="access" onchange = 'valorSelect();'>
+                      <select id="access" >
                         <option value="administrador">Administrador</option>
                         <option value="gerenciador">Gerenciador</option>
                         <option value="visualizador">Visualizador</option>
