--- a/user_management.html
+++ b/user_management.html
@@ -10,6 +10,7 @@
   <script src="//cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <link rel="stylesheet" type="text/css" href="css/user_management.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="icon" href="./images/y.png"   sizes="any"  >
@@ -159,12 +160,12 @@
         </header>
         <!--Título da tela-->
         <section class="section-title">
-          <h2>Gerenciamento de usuário</h2>    
+          <h2>Gerenciamento de usuário</h2>   
         </section>
 
         <!--Tabela -> Gerenciamento de Usuarios-->
         <section class="section-table" >
-          <table id="myTable" class="table table-hover" width="100%">
+          <table id="myTable" class="table-teste" width="100%">
             <thead>
               <tr>
                 <th>Nome</th>
@@ -173,13 +174,16 @@
                 <th>Idade</th>
               </tr>
             </thead>
-            <tbody>
+            <tbody class="tbody">
               <tr>
                 <td>Taila Santos</td>
                 <td>@laurenorganic</td>
-                <td><button class="read">Vizualizar</button></td>
-                <td><button class="update">Editar</button></td>
-                <td><button class="delete">Deletar</button></td>
+                <td><button  class="read">Vizualizar</button></td>
+                <td><button  class="update">Editar</button></td>
+                <td><a href="" id="btnDelete" class="delete">
+                      <img src="images/baseline_visibility_white_48dp.png" alt="">
+                    </a>
+                </td>
                 <td>vazio</td>
               </tr>
               <tr>
@@ -187,7 +191,7 @@
                 <td>@eunice23</td>
                 <td><button class="read">Vizualizar</button></td>
                 <td><button class="update">Editar</button></td>
-                <td><button class="delete">Deletar</button></td>
+                <td><button id="btnDelete" class="delete">Deletar</button></td>
                 <td>vazio</td>
               </tr>
               <tr>
@@ -294,5 +298,6 @@
   </div> 
 </div> 
   <script type="module" src="script/user_management.js"></script>
+  <script type="module" src="script/modal.js"></script>
 </body>
 </html>
