Autenticação da criação do usuario

--- a/user_registration.html
+++ b/user_registration.html
@@ -156,15 +156,19 @@
         <section class="registration">
             <h2>Cadastro de Usuário</h2>
                 <div class="form">
-                  <div class="name">
-                    <label for="">Nome completo
-                    <input id="nome" name="" required="" type="text" placeholder=""/>
-                    <p id="msgErro" style="display: none;">O Campo precisa ser preenchido</p>
+                  <div class="user-email">
+                    <label for="">Nome
+                      <input id="nome" name="" required="" type="text" placeholder=""/>
+                      <p id="msgErro2" style="display: none;">O Campo precisa ser preenchido</p>
+                    </label>
+                    <label for="">Sobrenome
+                      <input id="sobrenome" name="" required="" type="text" placeholder=""/>
+                      <p id="msgErro3" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
                   </div>
                   <div class="user-email">
                     <label for="">Usuário
-                      <input id="usuario" name="" required="" type="text" placeholder=""/>
+                      <input id="nomedeusuario" name="" required="" type="text" placeholder=""/>
                       <p id="msgErro2" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
                     <label for="">Email
